--- a/index.html
+++ b/index.html
@@ -50,49 +50,71 @@
           Proporcionando experiências incriveis por meio da tecnologia!
         </h1>
         <div class="meet stagger1">
-          <span>👇</span>
           <p>Me Conheça</p>
         </div>
+        <?xml version="1.0"?>
         <svg
-          class="scroll stagger1"
-          width="40"
-          height="77"
-          viewBox="0 0 40 77"
-          style="transform: translate(0px, 0px); opacity: 1"
+          class="scroll stagger1 arrows"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          xmlns:svgjs="http://svgjs.com/svgjs"
+          version="1.1"
+          x="0"
+          y="0"
+          viewBox="0 0 490.688 490.688"
+          style="enable-background: new 0 0 512 512"
+          xml:space="preserve"
+          class=""
         >
-          <g id="scroll" transform="translate(-253 -787)">
-            <g
-              id="Rectangle_12"
-              data-name="Rectangle 12"
-              transform="translate(253 787)"
-              fill="none"
-              stroke="#fff"
-              stroke-width="4"
-            >
-              <rect width="40" height="77" rx="20" stroke="none"></rect>
-              <rect
-                x="2"
-                y="2"
-                width="36"
-                height="73"
-                rx="18"
-                fill="none"
-              ></rect>
+          <g>
+            <g xmlns="http://www.w3.org/2000/svg">
+              <path
+                style=""
+                d="M472.328,216.529L245.213,443.665L18.098,216.529c-4.237-4.093-10.99-3.975-15.083,0.262   c-3.992,4.134-3.992,10.687,0,14.82l234.667,234.667c4.165,4.164,10.917,4.164,15.083,0l234.667-234.667   c4.093-4.237,3.975-10.99-0.262-15.083c-4.134-3.993-10.687-3.993-14.821,0L472.328,216.529z"
+                fill="#607d8b"
+                data-original="#607d8b"
+              />
+              <path
+                style=""
+                d="M472.328,24.529L245.213,251.665L18.098,24.529c-4.237-4.093-10.99-3.975-15.083,0.262   c-3.992,4.134-3.992,10.687,0,14.821l234.667,234.667c4.165,4.164,10.917,4.164,15.083,0L487.432,39.612   c4.237-4.093,4.354-10.845,0.262-15.083c-4.093-4.237-10.845-4.354-15.083-0.262c-0.089,0.086-0.176,0.173-0.262,0.262   L472.328,24.529z"
+                fill="#607d8b"
+                data-original="#607d8b"
+              />
             </g>
-            <circle
-              class="circle"
-              id="Ellipse_1"
-              data-name="Ellipse 1"
-              cx="11"
-              cy="11"
-              r="11"
-              transform="translate(262 798)"
-              fill="#fff"
-            ></circle>
+            <path
+              xmlns="http://www.w3.org/2000/svg"
+              d="M245.213,469.415c-2.831,0.005-5.548-1.115-7.552-3.115L2.994,231.633c-4.093-4.237-3.975-10.99,0.262-15.083  c4.134-3.992,10.687-3.992,14.82,0l227.136,227.115l227.115-227.136c4.237-4.093,10.99-3.975,15.083,0.262  c3.993,4.134,3.993,10.687,0,14.821L252.744,466.279C250.748,468.28,248.04,469.408,245.213,469.415z"
+              fill="#fca311"
+              data-original="#000000"
+              style=""
+              class="arrows"
+            />
+            <path
+              xmlns="http://www.w3.org/2000/svg"
+              d="M245.213,277.415c-2.831,0.005-5.548-1.115-7.552-3.115L2.994,39.633c-4.093-4.237-3.975-10.99,0.262-15.083  c4.134-3.992,10.687-3.992,14.821,0l227.136,227.115L472.328,24.529c4.093-4.237,10.845-4.354,15.083-0.262  s4.354,10.845,0.262,15.083c-0.086,0.089-0.173,0.176-0.262,0.262L252.744,274.279C250.748,276.28,248.04,277.408,245.213,277.415z"
+              fill="#fca311"
+              data-original="#000000"
+              style=""
+              class="arrows"
+            />
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
+            <g xmlns="http://www.w3.org/2000/svg"></g>
           </g>
         </svg>
       </div>
-
       <svg class="hero-design" width="686" height="688" viewBox="0 0 686 688">
         <g id="blockdesign" transform="translate(-935 -289)">
           <rect
@@ -184,11 +206,20 @@
       <div class="left">
         <div class="inner transition2">
           <p class="subtitle">Projeto em Destaque</p>
-          <a target="_blank" class="featured-title" href="http://vemsegura.epizy.com/">Vem Segura</a>
+          <a
+            target="_blank"
+            class="featured-title"
+            href="http://vemsegura.epizy.com/"
+            >Vem Segura</a
+          >
 
           <p class="featured-desc">
-            O Vem Segura é um projeto realizado por mim e meu squad durante o bootcamp da <a target="_blank" href="https://www.recodepro.org.br/">RECODEpro</a>.
-            O objetivo do projeto é promover uma plataforma de denúncia e conscientização acerca dos inúmeros casos de assédio na cidade do Rio de Janeiro.
+            O Vem Segura é um projeto realizado por mim e meu squad durante o
+            bootcamp da
+            <a target="_blank" href="https://www.recodepro.org.br/">RECODEpro</a
+            >. O objetivo do projeto é promover uma plataforma de denúncia e
+            conscientização acerca dos inúmeros casos de assédio na cidade do
+            Rio de Janeiro.
           </p>
         </div>
       </div>
